2002-12-08 Jackson Harper <jackson@latitudegeo.com>

	* CompilerTest.cs CompilerErrorTest.cs: Removed files

2002-12-08 Jackson Harper <jackson@latitudegeo.com>

	* AllTests.cs: Remove references to soon to be removed Tests

2002-11-13 Jackson Harper <jackson@latitudegeo.com>

	* CompilerTest.cs: Added more tests

2002-11-11 Jackson Harper <jackson@latitudegeo.com>

	* CompilerErrorTest.cs AllTests.cs: Added tests for the Microsoft.CSharp.CompilerError class

2002-11-06 Jackson Harper <jackson@latitudegeo.com>

	* AllTests.cs CompilerTest.cs: Added files